--- a/style.css
+++ b/style.css
@@ -4,10 +4,27 @@
 }
 
 .taskbar{
+    background-color: #cca360;
+    width: 100%;
     position: absolute;
+    top: 0;
+    display: flex;
+    /* justify-content: center; */
+    z-index: 110;
 }
 
 .vid{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
     opacity: 0.75;
     padding: 0;
+    display: block;
+    object-fit: cover;
+}
+
+img{
+    height: 60px;
+    width: 60px;
+    padding-left: 12px;
 }
