--- a/style.css
+++ b/style.css
@@ -23,16 +23,6 @@
     margin-top: 219px;
 }
 
-/* .vid{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    opacity: 0.75;
-    padding: 0;
-    display: block;
-    object-fit: cover;
-} */
-
 #logo{
     height: 60px;
     width: 60px;
@@ -110,4 +100,49 @@ a{
     padding: 30px;
     border: 3px solid #305491;
     border-radius: 12px;
+    color: rgb(31, 83, 114);
+}
+
+.contact{
+    width: 30%;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    left: 7%;
+    top: 20%;
+    position: absolute;
+    font-size: larger;
+    padding: 30px;
+    border: 3px solid #305491;
+    border-radius: 12px;
+    color: rgb(31, 83, 114);
+}
+
+.entry{
+    padding: 8px;
+    font-size: 16px;
+    margin: 8px;
+    width: 85%;
+    border: solid 0.1px rgb(31, 83, 114);
+    border-radius: 10px;
+    outline: none;
+}
+
+.entry:hover{
+    cursor: pointer;
+}
+
+#message{
+    padding: 8px;
+    font-size: 16px;
+    margin: 8px;
+    width: 85%;
+    border: solid 0.1px rgb(31, 83, 114);
+    border-radius: 12px;
+    outline: none;
+}
+
+#message{
+    cursor: pointer;
 }
